# mrmat-xmas-2023

./: .gitignore  README.md  azure-postbuild.sh  azure-prebuild.sh  dev-requirements.txt  pyproject.toml  requirements.txt
.azure/: config
.github/workflows/: build.yml  experimental-python_mrmat-xmas-2023-webapp.yml  main_mrmat-xmas.yml
src/admin/: index.html  package-lock.json  package.json  person.ts  tsconfig.json  vite.config.ts
src/admin/public/: site.webmanifest
src/admin/src/: App.vue  aad_auth.ts  authConfig.ts  auth_code.ts  main.ts  router.ts  style.css
src/admin/src/components/: AppContent.vue  AppError.vue  AppLoading.vue  AppMain.vue  MakingOf.vue  NotFound.vue  PersonCard.vue  useCosmos.ts  useMsal.ts  useSto.ts
src/admin/src/composables/: useMsal.ts
src/admin/src/layouts/default/: AppBar.vue  Default.vue
src/admin/src/models/: AzureIdentityCredential.ts  Person.ts
src/admin/src/plugins/: msalPlugin.ts
src/admin/src/router/: index.ts
src/admin/src/views/: Home.vue
src/frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
src/frontend/public/: site.webmanifest
src/frontend/src/: App.vue  auth.js  auth.ts  auth_aad.ts  auth_code.ts  i18n.js  i18n.ts  main.js  main.ts  messages.js  router.js  router.ts  store.js  store.ts  style.css  telemetry.ts  xmas_backend_client.ts
src/frontend/src/components/: Admin.vue  AppAdmin.vue  AppBlurredOverlay.vue  AppContent.vue  AppError.vue  AppFailed.vue  AppHeader.vue  AppHome.vue  AppLoading.vue  AppStranger.vue  Header.vue  Home.vue  ImagePlaceholder.vue  MakingOf.vue  NotFound.vue
src/mrmat_xmas_2023/: __init__.py  config.py  dependencies.py  model.py
src/mrmat_xmas_2023/static/: index.html
tests/: conftest.py  test_api.py  test_placeholder.py
var/: tap-to-update.curve
var/azure/: mrmat-xmas-2023.bicep  startup.sh
var/azure-infra/: mrmat-xmas-2023.bicep
var/azure-webapp/admin/: ecosystem.config.js
var/azure-webapp/backend/scripts/: azure-postbuild.sh
var/azure-webapp/frontend/scripts/: startup.sh
